Safari365 Prod/src/objects/Consultant_Target_Lead_Yearly__c.object
<CustomObject>
    <fields>
        <fullName>Consultant_Target_Lead_Achieved__c</fullName>
        <label>Total Leads Received (Annual)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Total_Lead_Target__c</fullName>
        <label>Total Leads Required (Annual)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultant_Target_Lead_Yearly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CounsltantIdAndYearKey__c</fullName>
        <externalId>true</externalId>
        <label>CounsltantIdAndYearKey</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Leads_Recieved_Target_Annual__c</fullName>
        <formula>Consultant_Target_Lead_Achieved__c /  Consultant_Total_Lead_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Leads Recieved Target (Annual)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Individual Cons. Lead Rollup (Annual)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Year__c</columns>
        <columns>Consultant_Target_Lead_Achieved__c</columns>
        <columns>Consultant_Total_Lead_Target__c</columns>
        <columns>of_Leads_Recieved_Target_Annual__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTLY-{00000000}</displayFormat>
        <label>ID - Indiv Cons. Lead Rollup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Cons. Lead Rollup (Annual)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>